# kaggle

./: .gitignore  README.md  pyproject.toml
beginner47/: README.md  train.py
beginner47/data/: submission.csv
beginner47/models/: lightgbm.py
beginner47/notebook/: SWEETVIZ_REPORT.html  data_viz.ipynb
beginner47/sh/: train.sh
beginner47/src/: test.py  train.py
beginner47/src/models/: catboost.py  lightgbm.py
beginner47/src/utils/: utils.py
deloitte/: pyproject.toml
deloitte/data/: venue_information.csv
deloitte/src/: train-gbm.py
