[tool.poetry]
name = "kaggle-signate"
version = "0.1.0"
description = ""
authors = ["sugarl-sudo <sato.yuta0112@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^2.2.2"
lightgbm = "^4.4.0"
scikit-learn = "^1.5.0"
signate = "^0.9.10"
optuna = "^3.6.1"
optuna-integration = "^3.6.0"
catboost = "^1.2.5"
click = "^8.1.7"
ipykernel = "^6.29.4"
sweetviz = "^2.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
